@@ -1,4 +1,8 @@
 2006-06-13  Jean-Louis Martineau <martineau@zmanda.com>
+	* amandad-src/amandad.c (s_ackwait): Resend the REP on receive of a
+					     duplicate REQ.
+
+2006-06-13  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/security-util.c (bsd_recv_security_ok): Set error only
 	  if we get an error.
 
